Update on BVN and Profile Update
